@@ -3,8 +3,8 @@
 /*
 	Phoronix Test Suite
 	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
-	Copyright (C) 2009 - 2019, Phoronix Media
-	Copyright (C) 2009 - 2019, Michael Larabel
+	Copyright (C) 2009 - 2021, Phoronix Media
+	Copyright (C) 2009 - 2021, Michael Larabel
 
 	This program is free software; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
@@ -40,14 +40,6 @@ class rename_identifier_in_result_file implements pts_option_interface
 
 		$rename_identifier = pts_user_io::prompt_text_menu('Select the test run to rename', $result_file_identifiers);
 		$rename_identifier_new = pts_user_io::prompt_user_input('Enter the new identifier');
-
-		foreach(array('test-logs', 'system-logs', 'installation-logs') as $dir_name)
-		{
-			if(is_dir(PTS_SAVE_RESULTS_PATH . $r[0] . '/' . $dir_name . '/' . $rename_identifier))
-			{
-				rename(PTS_SAVE_RESULTS_PATH . $r[0] . '/' . $dir_name . '/' . $rename_identifier, PTS_SAVE_RESULTS_PATH . $r[0] . '/' . $dir_name . '/' . $rename_identifier_new);
-			}
-		}
 
 		$result_file->rename_run($rename_identifier, $rename_identifier_new);
 		pts_client::save_test_result($result_file->get_file_location(), $result_file->get_xml());
