@@ -63,6 +63,30 @@ function delete_run_from_result_file(result_file, system_identifier, ppd)
 		xhttp.open("POST", WEB_URL_PATH + "index.php?page=remove-result-run", true);
 		xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 		xhttp.send("result_file_id=" + result_file + "&result_run=" + system_identifier);
+		setTimeout(function(){window.location.reload(1);}, 2500);
+	}
+	return false;
+}
+function rename_run_in_result_file(result_file, system_identifier)
+{
+	var new_system_identifier = prompt("Please enter new result identifier:", system_identifier);
+	if(new_system_identifier == "")
+	{
+		alert("Result identifier cannot be empty!");
+	}
+	else if(confirm("Confirm changing '" + system_identifier + "' to '" + new_system_identifier + "'?"))
+	{
+		var xhttp = new XMLHttpRequest();
+		xhttp.onreadystatechange = function() {
+		if(this.readyState == 4 && this.status == 200) {
+
+			}
+		};
+		xhttp.open("POST", WEB_URL_PATH + "index.php?page=rename-result-run", true);
+		xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+		xhttp.send("result_file_id=" + result_file + "&result_run=" + system_identifier + "&new_result_run=" + new_system_identifier);
+		setTimeout(function(){window.location.reload(1);}, 1500);
+
 	}
 	return false;
 }
